@@ -86,6 +86,7 @@ metap                   Meta-analysis of p values
 metareg                 Fixed and random effects model for meta-analysis
 muvar                   Means and variances under 1- and 2- locus (diallelic) QTL model
 read.ms.output          A utility function to read ms output
+snptest_sample          A utility to generate SNPTEST sample file
 whscore                 Whittemore-Halpern scores for allele-sharing
 GRM functions           ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA, WriteGRM, WriteGRMBin, WriteGRMSAS
                         handle genomic relationship matrix involving other software
