@@ -933,3 +933,15 @@ mhtplot2d <- function(data, cex=0.6)
   points(pos1,pos2,cex=cex,col=ifelse(d[["cis"]],"red","blue"),pch=19)
   legend("top",legend=c("cis","trans"),box.lty=0,cex=cex,col=c("red","blue"),horiz=TRUE,inset=c(0,1),xpd=TRUE,pch=19)
 }
+
+snptest_sample <- function(data,sample_file,ID_1="ID_1",ID_2="ID_2",missing="missing",C=NULL,D=NULL,P=NULL)
+{
+  cat(ID_1,ID_2,missing,C,D,P,file=sample_file)
+  cat("\n",file=sample_file,append=TRUE)
+  len_C <- length(C)
+  len_D <- length(D)
+  len_P <- length(P)
+  cat("0 0 0",rep("C",len_C),rep("D",len_D),rep("P",len_P),file=sample_file,append=TRUE)
+  cat("\n",file=sample_file,append=TRUE)
+  write.table(d[c(ID_1,ID_2,missing,C,D,P)],file=sample_file,append=TRUE,row.names=FALSE,col.names=FALSE,quote=FALSE)
+}
